Bug 805626 - make draft message saved in offline mode use fake db key. r=Standard8